# domino

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  so_far.md  whatisdomino.md
.cargo/: config.toml
.claude/: napkin.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-19T19-42-16-325Z.yml  page-2026-04-19T21-13-03-506Z.yml
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: mstart.md  mstop.md
recorder/: Cargo.toml
recorder/.cargo/: config.toml
recorder/src/: cli.rs  main.rs  session.rs  signals.rs
recorder/src/audio/: encoder.rs  mic.rs  mod.rs  system.rs
recorder/src/transcription/: decode.rs  dedup.rs  merge.rs  mod.rs  model.rs  output.rs  progress.rs  resample.rs  whisper.rs
recorder/tests/: concurrent_start.rs
site/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
site/.claude/: napkin.md
site/.playwright-mcp/: page-2026-04-21T23-01-07-654Z.yml  page-2026-04-21T23-02-06-307Z.yml  page-2026-04-21T23-09-28-451Z.yml  page-2026-04-21T23-10-37-018Z.yml
site/app/: globals.css  layout.tsx  page.tsx
site/app/components/: CodeBlock.tsx  Commands.tsx  DominoMark.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  MobileNav.tsx  Overview.tsx  Privacy.tsx  Requirements.tsx  Reveal.tsx  SectionHeader.tsx  Sidebar.tsx  ThemeToggle.tsx  ToolContext.tsx  ToolTabs.tsx  Troubleshooting.tsx  VideoEmbed.tsx
starter_pack/: README.md
starter_pack/for_agents/commands/: spec.md
(+3 files in other folders)
