[package]
name = "domino-recorder"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "domino-recorder"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
fs2 = "0.4"
cpal = "0.15"
ringbuf = "0.4"
audiopus = "0.2"
ogg = "0.9"

[dev-dependencies]
dirs = "5"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
